cmake_minimum_required(VERSION 3.17)
project(C_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_C__ main.cpp lesson01/q1_1.cpp lesson01/q1_2.cpp lesson01/q1_3.cpp lesson01/q1_4.cpp lesson01/q1_5.cpp lesson01/q1_6.cpp lesson02/ex2_1.cpp lesson03/ex3_1.cpp lesson03/Car.h lesson03/Car.cpp lesson03/ex3_2.cpp lesson03/Counter.h lesson03/ex3_3.cpp lesson03/Counter2.h lesson03/ex3_4.cpp lesson03/q3_1.cpp lesson03/DoubleArray.h lesson03/DoubleArray.cpp lesson03/q3_2.cpp lesson03/q3_3.cpp lesson03/Book.h lesson03/Book.cpp lesson03/q3_4.cpp lesson03/Counter3.cpp lesson04/Date.h lesson04/Date.cpp lesson04/Account.h lesson04/Account.cpp lesson04/ex4_3.cpp)